fixed overflow

--- a/saliportfolio/pages/posts/PostPage.module.scss
+++ b/saliportfolio/pages/posts/PostPage.module.scss
@@ -121,11 +121,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 100vw;
+  // width: 100vw;
 }
-.relatedCards .cards{
-  width: 300px;
-}
+// .relatedCards .cards{
+//   width: 300px;
+// }
 
 .tocContainer {
   // color: #248bcc;
