--- a/saliportfolio/styles/globals.css
+++ b/saliportfolio/styles/globals.css
@@ -17,7 +17,7 @@ a {
 
 * {
   box-sizing: border-box;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   /* background-color: black; */
 }
 
